--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,26 +1,39 @@
-# Node modules
+# Node modules 
 node_modules/
-
-# Environment variables
+# Environment variables 
 .env
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# OS files
-.DS_Store
-
-# Build outputs
-dist/
+# Build outputs 
+dist/ 
 build/
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+# Logs 
+logs 
+*.log 
+npm-debug.log* 
+yarn-debug.log* 
+yarn-error.log*
+# OS files 
+.DS_Store
+# Python virtual environment
+venv/
+.venv/
 
+# Flask
+instance/
+*.sqlite3
+# OS files 
+.DS_Store
+# PostgreSQL dumps / backups
+*.sql
+*.dump
 # IDE / Editor
-.vscode/
-.idea/
-
-# Coverage
+ .vscode/ 
+ .idea/
+# OS (Windows)
+Thumbs.db
+# Coverage 
 coverage/
