Fix .gitignore and clean repo

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT=5000
-DB_NAME=tourist_db
+DB_NAME=tourist_safety
 DB_USER=postgres
-DB_PASS=admin123
+DB_PASS=diya2006
 DB_HOST=localhost
-JWT_SECRET=supersecretkey
+JWT_SECRET=super_strong_secret_key_123
