--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 PORT=5000
 DB_NAME=tourist_safety
 DB_USER=postgres
-DB_PASS=diya2006
+DB_PASS=meow
 DB_HOST=localhost
-JWT_SECRET=super_strong_secret_key_123
+DB_PORT=5432
+JWT_SECRET=hackathon_secret_key
